--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "shadow-cljs": "^2.14.3"
   },
   "dependencies": {
+    "chart.js": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-star-ratings": "^2.3.0",
