--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "shadow-cljs": "^2.14.3"
   },
   "dependencies": {
+    "ag-grid-community": "^26.2.0",
+    "ag-grid-react": "^26.2.0",
     "chart.js": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
